@@ -32,6 +32,9 @@
       <licence tarname="mpfr-%-mingw32-lic.tar.lzma" />
 
       <component class="dev">
+        <release tarname="mpfr-3.1.5-2-mingw32-dev.tar.xz">
+          <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
+        </release>
         <release tarname="mpfr-3.1.5-1-mingw32-dev.tar.xz">
           <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
         </release>
@@ -45,16 +48,19 @@
       </component>
 
       <component class="doc">
+        <release tarname="mpfr-3.1.5-2-mingw32-doc.tar.xz" />
         <release tarname="mpfr-3.1.5-1-mingw32-doc.tar.xz" />
         <release tarname="mpfr-3.1.2-2-mingw32-doc.tar.lzma" />
         <release tarname="mpfr-2.4.1-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="info">
+        <release tarname="mpfr-3.1.5-2-mingw32-info.tar.xz" />
         <release tarname="mpfr-3.1.5-1-mingw32-info.tar.xz" />
       </component>
 
       <component class="lic">
+        <release tarname="mpfr-3.1.5-2-mingw32-lic.tar.xz" />
         <release tarname="mpfr-3.1.5-1-mingw32-lic.tar.xz" />
         <release tarname="mpfr-3.1.2-2-mingw32-lic.tar.lzma" />
         <release tarname="mpfr-2.4.1-1-mingw32-lic.tar.lzma" />
@@ -87,6 +93,7 @@
       <licence tarname="mpfr-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
+        <release tarname="libmpfr-3.1.5-2-mingw32-dll-4.tar.xz" />
         <release tarname="libmpfr-3.1.5-1-mingw32-dll-4.tar.xz" />
         <release tarname="libmpfr-3.1.2-2-mingw32-dll-4.tar" >
           <download tarname="mpfr-3.1.2-2-mingw32-dll.tar.lzma" />
