@@ -74,7 +74,7 @@
   b99a540c08e3321515ed2485c1771d22c0c9ef08 2016031600 msys-ncurses.xml
   243df0057053eebc442d922dff075e09fb579805 2012073100 msys-openssh.xml
   0103c79956ba9fa128755cd93374f0fc334c7cf6 2012073100 msys-openssl.xml
-  5c9e6921f171ce31b016037f5b7c836ed1a4960f 2017122200 msys-package-list.xml
+  5c9e6921f171ce31b016037f5b7c836ed1a4960f 2018011700 msys-package-list.xml
   d19e1e39e5fab25a3d40acb92b98b40a60b0da90 2012073100 msys-patch.xml
   d4f194d2e95035da2b712c54053fb6ad5d45e1d9 2013101200 msys-perl.xml
   19ddf46e23e23010a440af1b423d986712c3bda7 2012073100 msys-popt.xml
