@@ -1,3 +1,12 @@
+2018-01-17  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Upgrade to correct malformed libmpfr.a
+
+	* mingw32/mingw32-mpfr.xml (mpfr, libmpfr): Add 3.1.5-2 release;
+	this removes references to libgmp.dll.a from libmpfr.a, correctly
+	replacing them with references to static libgmp.a
+	* mingw32/issue.log: Update accordingly.
+
 2017-09-08  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Eliminate libgcc_s_dw2-1.dll dependencies in GMP DLLs.
